--- a/About.html
+++ b/About.html
@@ -14,7 +14,7 @@
                 <a href="Index.html" class="ob">Home</a>
                 <a href="Portfolio.html" class="ob">Portfolio</a>
                 <a href="Photography.html" class="ob">Photos</a>
-                <a href="About.html" style="background-color: green;color: white;" class="ob">About</a>
+                <a href="About.html" style="background-color: rgb(51, 102, 102);color: white;" class="ob">About</a>
             </div>
             <hr class="navhr" style="grid-column: 3/4;">
     </nav>
