--- a/Index.html
+++ b/Index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/Portfolio.css">
     <title>Stevens</title>
+    <link rel="icon" type="image/x-icon" href="">
 </head>
 <body>
     <nav style="position: fixed;z-index: 100;" class="navgrid">
             <hr style="grid-column: 1/2;" class="navhr">
             <div class="navgrid2" style="grid-column: 2/3;">
-                <a href="Index.html" class="ob" style="background-color: green;color: white;">Home</a>
+                <a href="Index.html" class="ob" style="background-color:rgb(51, 102, 102);color: white;">Home</a>
                 <a href="Portfolio.html" class="ob">Portfolio</a>
                 <a href="Photography.html" class="ob">Photos</a>
                 <a href="About.html" class="ob">About</a>
