--- a/Photography.html
+++ b/Photography.html
@@ -13,7 +13,7 @@
             <div class="navgrid2" style="grid-column: 2/3;">
                 <a href="Index.html" class="ob">Home</a>
                 <a href="Portfolio.html" class="ob">Portfolio</a>
-                <a href="Photography.html" style="background-color: green;color: white;" class="ob">Photos</a>
+                <a href="Photography.html" style="background-color: rgb(51, 102, 102);color: white;" class="ob">Photos</a>
                 <a href="About.html" class="ob">About</a>
             </div>
             <hr class="navhr" style="grid-column: 3/4;">
