--- a/Portfolio.html
+++ b/Portfolio.html
@@ -12,7 +12,7 @@
             <hr style="grid-column: 1/2;" class="navhr">
             <div class="navgrid2" style="grid-column: 2/3;">
                 <a href="Index.html" class="ob">Home</a>
-                <a href="Portfolio.html" style="background-color: green;color: white;" class="ob">Portfolio</a>
+                <a href="Portfolio.html" style="background-color: rgb(51, 102, 102);color: white;" class="ob">Portfolio</a>
                 <a href="Photography.html" class="ob">Photos</a>
                 <a href="About.html" class="ob">About</a>
             </div>
