Portfolio, Home, and Photography pages 100% work

--- a/Photography.html
+++ b/Photography.html
@@ -8,15 +8,34 @@
     <title>Stevens</title>
 </head>
 <body>
-    <nav style="position: fixed;" class="navgrid">
-            <hr style="grid-column: 1/2;" class="navhr">
-            <div class="navgrid2" style="grid-column: 2/3;">
-                <a href="Index.html" class="ob">Home</a>
-                <a href="Portfolio.html" class="ob">Portfolio</a>
-                <a href="Photography.html" style="background-color: rgb(51, 102, 102);color: white;" class="ob">Photos</a>
-                <a href="About.html" class="ob">About</a>
-            </div>
-            <hr class="navhr" style="grid-column: 3/4;">
+    <nav style="position: fixed;z-index: 100;" class="navgrid">
+        <div class="navgrid2">
+            <a href="Index.html" class="ob">Home</a>
+            <a href="Portfolio.html" class="ob">Portfolio</a>
+            <a href="Photography.html" class="ob" style="background-color:rgb(51, 102, 102);color: white;">Photos</a>
+            <a href="About.html" class="ob">About</a>
+        </div>
     </nav>
+
+    <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">Photography</h1>
+
+    <div class="picgrid" style="margin-top: 6%;">
+        <div class="picgrid2">
+            <div class="picgrid3">
+                <p>Hola</p>
+                <img src="Content/photography/Portrait1.png">
+            </div>
+            <div class="picgrid3">
+                <p>Hola</p>
+                <img src="Content/photography/Nature1.png">
+            </div>
+        </div>
+        <div class="picgrid2">
+            <div class="picgrid3">
+                <p>Hola</p>
+                <img src="Content/photography/Close1.png">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
