--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,15 +8,24 @@
     <title>Stevens</title>
 </head>
 <body>
-    <nav style="position: fixed;" class="navgrid">
-            <hr style="grid-column: 1/2;" class="navhr">
-            <div class="navgrid2" style="grid-column: 2/3;">
-                <a href="Index.html" class="ob">Home</a>
-                <a href="Portfolio.html" style="background-color: rgb(51, 102, 102);color: white;" class="ob">Portfolio</a>
-                <a href="Photography.html" class="ob">Photos</a>
-                <a href="About.html" class="ob">About</a>
-            </div>
-            <hr class="navhr" style="grid-column: 3/4;">
+    <nav style="position: fixed;z-index: 100;" class="navgrid">
+        <div class="navgrid2">
+            <a href="Index.html" class="ob">Home</a>
+            <a href="Portfolio.html" class="ob" style="background-color:rgb(51, 102, 102);color: white;">Portfolio</a>
+            <a href="Photography.html" class="ob">Photos</a>
+            <a href="About.html" class="ob">About</a>
+        </div>
     </nav>
+    <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">Portfolio</h1>
+        <div class="navgrid">
+            <div class="pgl">
+                <img src="Content/DW/Gyrokinesis/GYROKINESIS & GYROTONIC.jpg">
+                <p>alksdjh lkj ahsdlkfjh lkjhadslkjhf lkajshdf lkjashdflkjahsdlk jhalskjdhf laksjdh</p>
+            </div>
+            <div class="pgr">
+                <img src="Content/DW/Craniosacral/Craniosacral work 2.jpg">
+                <p>alskdjfh alskdjhflaksjdhflkjahs dlkfjha sldkjfh alksjdhflkajhs dflkjha slkdjhf alksjdhf lakjshdflkjahs dlkjhf lakjshd flkjha sdlkjfh lakjsdh f</p>
+            </div>
+        </div>
 </body>
 </html>
