--- a/About.html
+++ b/About.html
@@ -8,15 +8,13 @@
     <title>Stevens</title>
 </head>
 <body>
-    <nav style="position: fixed;" class="navgrid">
-            <hr style="grid-column: 1/2;" class="navhr">
-            <div class="navgrid2" style="grid-column: 2/3;">
-                <a href="Index.html" class="ob">Home</a>
-                <a href="Portfolio.html" class="ob">Portfolio</a>
-                <a href="Photography.html" class="ob">Photos</a>
-                <a href="About.html" style="background-color: rgb(51, 102, 102);color: white;" class="ob">About</a>
-            </div>
-            <hr class="navhr" style="grid-column: 3/4;">
-    </nav>
+    <nav style="position: fixed;z-index: 100;" class="navgrid">
+        <div class="navgrid2">
+            <a href="Index.html" class="ob">Home</a>
+            <a href="Portfolio.html" class="ob">Portfolio</a>
+            <a href="Photography.html" class="ob">Photos</a>
+            <a href="About.html" class="ob" style="background-color:rgb(51, 102, 102);color: white;">About</a>
+        </div>
+</nav>
 </body>
 </html>
