--- a/Index.html
+++ b/Index.html
@@ -10,14 +10,12 @@
 </head>
 <body>
     <nav style="position: fixed;z-index: 100;" class="navgrid">
-            <hr style="grid-column: 1/2;" class="navhr">
-            <div class="navgrid2" style="grid-column: 2/3;">
+            <div class="navgrid2">
                 <a href="Index.html" class="ob" style="background-color:rgb(51, 102, 102);color: white;">Home</a>
                 <a href="Portfolio.html" class="ob">Portfolio</a>
                 <a href="Photography.html" class="ob">Photos</a>
                 <a href="About.html" class="ob">About</a>
             </div>
-            <hr class="navhr" style="grid-column: 3/4;">
     </nav>
     <br>
 
@@ -27,36 +25,59 @@
     <h3 class="scroll">↓ Scroll For More ↓</h3>
 
     <div class="picgrid">
-        <a href="Portfolio.html" style="grid-column: 1/4;grid-row: 1/3;position: relative;left:7%"><img src="Content/design/Advertising.png"></a>
-        <a href="Portfolio.html" style="grid-column: 5/7;grid-row: 1/3;position: relative;right: 20%;"><img src="Content/design/Advertising2.png"></a>
-        <a href="Photography.html" style="grid-column: 1/3;grid-row: 3/7;;"><img style="width: 100%;" src="Content/photography/Landscape1.png"></a>
-        <a href="Portfolio.html" style="grid-column: 5/7;grid-row: 3/5;"><img src="Content/photography/Close1.png"></a>
-        <a href="Portfolio.html" style="grid-column: 3/5;grid-row: 4/6;"><img src="Content/photography/Nature1.png"></a>
-        <a href="Portfolio.html" style="grid-column: ;grid-row: ;"><img src=""></a>
-        <a href="Photography.html" style=""><img src=""></a>
-        <a href="Portfolio.html" style=""><img src=""></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        <a></a>
-        
-
-        
+        <!-- Start of the entire Portfolio Examples -->
+        <div class="picgrid2">
+            <!-- Start of Left side of Portfolio -->
+            <!--Template for future items to be added
+            <div class="picgrid3">
+                <img src="">
+                <a href="#"><p>#</p></a>
+            </div>
+            -->
+            <div class="picgrid3">
+                <a href="Portfolio.html"><p>Example</p></a>
+                <img src="Content/design/Advertising.png">
+            </div>
+            <div class="picgrid3">
+                <img src="Content/design/Advertising2.png">
+                <a href="Portfolio.html"><p>Example</p></a>
+            </div>
+            <div class="picgrid3">
+                <img src="Content/photography/Landscape1.png">
+                <a href="Portfolio.html"><p>Example</p></a>
+            </div>
+            <!-- End of left side items -->
+        </div>
+        <div class="picgrid2">
+            <!-- Start of right side items -->
+            <div class="picgrid3">
+                <img src="Content/CFC/Social graphic Teacher ads10.jpg">
+                <a href="Portfolio.html"><p>Filler</p></a>
+            </div>
+            <div class="picgrid3">
+                <img src="Content/photography/Nature1.png">
+                <a href="Portfolio.html"><p>#</p></a>
+            </div>
+            <div class="picgrid3">
+                <img src="Content/DW/Broadway/Broadway Workshop flyers.jpg">
+                <a href="Portfolio.html"><p>#</p></a>
+            </div>
+            <!-- End of right side items -->
+        </div>      
     </div>
-    <script>
+    <!-- End of portfolio examples -->
+    <div class="me">
+        <h2 style="text-align: center; margin-top: 7%;">About Me</h2>
+        <div class="ag">
+            <p style="margin-left: 5%;margin-right: 5%;grid-column: 1/2;font-size: .8em;">laksjdhf askdjf hlaksd jfhlkajsdhfl asldkjfh lakjsdhf lakjshdf lkajsdhflkjashdf llaksjdhf lkajshd ljasdh flkjashdflkjhasdlkjf halsjd </p>
+            <img style="width: 100%;" src="Content/ToniPortrait.png" alt="Toni Stevens Portrait">
+        </div>
+    </div>
+    <footer class="footer">
+        <a><p>I</p></a>
 
-    </script>
+    </footer>
+
+
 </body>
 </html>
