update to site plan

--- a/Photography.html
+++ b/Photography.html
@@ -35,6 +35,18 @@
                 <p>Hola</p>
                 <img src="Content/photography/Close1.png">
             </div>
+            <div class="picgrid3">
+                <p>Hola</p>
+                <img src="Content/photography/Portrait2.png">
+            </div>
+            <div class="picgrid3">
+                <p>Hola</p>
+                <img src="Content/photography/Landscape1.png">
+            </div>
+            <div class="picgrid3">
+                <p>Hola</p>
+                <img src="Content/photography/Portrait3.png">
+            </div>
         </div>
     </div>
 </body>
