--- a/site-plan.html
+++ b/site-plan.html
@@ -87,9 +87,9 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
-        <a href="#">Page4</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Photos</a>
+        <a href="#">About</a>
       </nav>
       <hr>
       <h2>
