final site plan revisions

--- a/site-plan.html
+++ b/site-plan.html
@@ -128,34 +128,84 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        Home
+        Peices of text from the About page including name, and the first part of the about section.
       </p>
       <p>Images for the Home page</p>
         <img src="Content/design/Advertising.png" alt="image for homepage">
         <img src="Content/photography/Close1.png" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Portfolio</h3>
       <p>
-        Portfolio
+        Text for each of the individual projects
       </p>
       <p>Images for the Page 2</p>
         <img src="Content/design/Advertising2.png" alt="image for page">
         <img src="Content/design/Illustration.png" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Photos</h3>
       <p>
-        Photos
+        Just displays the photos
       </p>
       <p>Images for the Page 3</p>
         <img src="Content/photography/Landscape1.png" alt="image for page3">
         <img src="Content/photography/Nature1.png" alt="image for page3">
 
       </ul>
-      <h3>[Page 4]</h3>
+      <h3>About</h3>
       <p>
-        About
+        includes:
+        Hi! My name is Antonia, but you can call me Toni. I am a Graphic Designer based out of South East Idaho. I earned my BA for graphic design at BYU-I where I took a variety of art and photography classes. My main focus is in Branding and Identity projects, but I thoroughly enjoy exploring the diverse applications that Adobe has to offer.
+
+Ever since I was little, I was always drawing and coming up with creative ways to solve problems. My parents liked to call me the MacGyver of the house. It wasn’t until junior year of highschool where I discovered graphic design, and I knew instantly that was what my career was going to be. Photography has always been part of my life as well. I like to say my catchphrase is ‘Graphic Designer my day, Photographer my night’ but maybe that is a little cheesy. When I’m not on my computer you can find me tending to my plants, doing some activity outside, or playing with my cats and dog. 
+
+additionaly:
+CONTACT
+
+EDUCATION
+
+EXPERIENCE
+
+SKILLS
+
+Creative Curiosity
+Junior Graphic Designer
+2022 - present
+• Editing Branding Books for companies, and having a better
+understanding of how to design for that company to fit their style
+• Creating custom graphics for flyers, posters, social media, and
+advertisements to be eye catching for the viewer, and inspire
+them to look into that event.
+• Utilizing Adobe Illustrator, Indesign, & Photoshop to create
+interesting visuals
+• Photography and videography services for Creative Curiosity
+clients. The content was used in social media, emails and other
+digital platforms.
+Trail Creek Nursery
+Sales Associate / Cashier / Yard Maintenance
+2017 - 2023
+• Check out plants or items customers get at the register, manage
+the checkout process and dealing with money
+• Design signs for sales around the nursery, customers can easily
+know what sales are going on
+• Keep up with the maintenance around the nursery to insure visual
+appeal to customers
+• Help customers find plants and answer their questions, practicing
+good customer service for the customers experience
+
+208.541.1777
+toni.does.design@gmail.com
+
+BA in Graphic Design
+BYU-I
+December 2023
+
+Adobe...
+• Illustrator
+• Indesign
+• Photoshop
+Photography
       </p>
       <p>Images for the Page 4</p>
         <img src="Content/ToniPortrait.png" alt="image for page4">
