--- a/Index.html
+++ b/Index.html
@@ -69,7 +69,7 @@
     <div class="me">
         <h2 style="text-align: center; margin-top: 7%;">About Me</h2>
         <div class="ag">
-            <p style="margin-left: 5%;margin-right: 5%;grid-column: 1/2;font-size: .8em;">laksjdhf askdjf hlaksd jfhlkajsdhfl asldkjfh lakjsdhf lakjshdf lkajsdhflkjashdf llaksjdhf lkajshd ljasdh flkjashdflkjhasdlkjf halsjd </p>
+            <p style="overflow:scroll;text-align:left;margin-left: 5%;margin-right: 5%;grid-column: 1/2;font-size: 50%;">Hi! My name is Antonia, but you can call me Toni. I am a Graphic Designer based out of South East Idaho. I earned my BA for graphic design at BYU-I where I took a variety of art and photography classes. My main focus is in Branding and Identity projects, but I thoroughly enjoy exploring the diverse applications that Adobe has to offer.</p>
             <img style="width: 100%;" src="Content/ToniPortrait.png" alt="Toni Stevens Portrait">
         </div>
     </div>
