--- a/About.html
+++ b/About.html
@@ -15,6 +15,17 @@
             <a href="Photography.html" class="ob">Photos</a>
             <a href="About.html" class="ob" style="background-color:rgb(51, 102, 102);color: white;">About</a>
         </div>
-</nav>
+    </nav>
+    <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">About Me</h1>
+    <div class="aboutg">
+        
+    </div>
+    <footer class="footer">
+        <div class="fg">
+            <a href=""><img src="Content/Logo/instagram.png"></a>
+            <a href=""><img src="Content/Logo/linked in.png"></a>
+            <a href=""><img src="Content/Logo/behance.png"> </a>
+        </div>
+    </footer>
 </body>
 </html>
