--- a/Index.html
+++ b/Index.html
@@ -69,13 +69,16 @@
     <div class="me">
         <h2 style="text-align: center; margin-top: 7%;">About Me</h2>
         <div class="ag">
-            <p style="overflow:scroll;text-align:left;margin-left: 5%;margin-right: 5%;grid-column: 1/2;font-size: 50%;">Hi! My name is Antonia, but you can call me Toni. I am a Graphic Designer based out of South East Idaho. I earned my BA for graphic design at BYU-I where I took a variety of art and photography classes. My main focus is in Branding and Identity projects, but I thoroughly enjoy exploring the diverse applications that Adobe has to offer.</p>
+            <p>Hi! My name is Antonia, but you can call me Toni.<br> I am a Graphic Designer based out of South East Idaho. I earned my BA for graphic design at BYUI where I took a variety of art and photography classes. My main focus is in Branding and Identity projects, but I thoroughly enjoy exploring the diverse applications that Adobe has to offer.</p>
             <img style="width: 100%;" src="Content/ToniPortrait.png" alt="Toni Stevens Portrait">
         </div>
     </div>
     <footer class="footer">
-        <a><p>I</p></a>
-
+        <div class="fg">
+            <a href=""><img src="Content/Logo/instagram.png"></a>
+            <a href=""><img src="Content/Logo/linked in.png"></a>
+            <a href=""><img src="Content/Logo/behance.png"> </a>
+        </div>
     </footer>
 
 
