--- a/Photography.html
+++ b/Photography.html
@@ -49,5 +49,12 @@
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div class="fg">
+            <a href=""><img src="Content/Logo/instagram.png"></a>
+            <a href=""><img src="Content/Logo/linked in.png"></a>
+            <a href=""><img src="Content/Logo/behance.png"> </a>
+        </div>
+    </footer>
 </body>
 </html>
