--- a/Portfolio.html
+++ b/Portfolio.html
@@ -27,5 +27,12 @@
                 <p>alskdjfh alskdjhflaksjdhflkjahs dlkfjha sldkjfh alksjdhflkajhs dflkjha slkdjhf alksjdhf lakjshdflkjahs dlkjhf lakjshd flkjha sdlkjfh lakjsdh f</p>
             </div>
         </div>
+        <footer class="footer">
+            <div class="fg" style="padding-top: 8%;padding-bottom: 0;">
+                <a href=""><img src="Content/Logo/instagram.png"></a>
+                <a href=""><img src="Content/Logo/linked in.png"></a>
+                <a href=""><img src="Content/Logo/behance.png"> </a>
+            </div>
+        </footer>
 </body>
 </html>/
