--- a/About.html
+++ b/About.html
@@ -17,9 +17,35 @@
         </div>
     </nav>
     <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">About Me</h1>
-    <div class="aboutg">
+    <div class="aboutg" style="grid-gap: 50px;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;">
+        <div class="picgrid2" style="text-align: center;height: auto;">
+            <img style="width: 100%;" src="Content/ToniPortrait.jpg">
+            <h2 style="font-size: 2em;margin-bottom: 0;">Experience</h2>
+            <div class="eg">
+                <h2 style="font-size: 1.5em;">Creative Curiousity</h2>
+                <p style="font-size: 1.2em;">Junior Graphic Designer</p>
+                <p style="font-size: 1.2em;position: relative;top: -30%;position: relative;top: -2em;">2022 - present</p>
+            </div>
+            <h2 style="font-size: 2em;margin-bottom: 0;">Education</h2>
+            <div class="eg">
+                <h2 style="font-size: 1.5em;">BYU-Idaho</h2>
+                <p style="font-size: 1.2em;">Graphic Design</p>
+                <p style="font-size: 1.2em;position: relative;top: -30%;position: relative;top: -2em;">September 2019 - December 2023</p>
+            </div>
+        </div>
+        <div class="picgrid20" style="height: auto;">
+            <p style="font-size: 1.15em;height: 100%;position: relative;top: -1em;">Hi! My name is Antonia, but you can call me Toni. I am a Graphic Designer based out of South East Idaho. I earned my BA for graphic design at BYU-I where I took a variety of art and photography classes. My main focus is in Branding and Identity projects, but I thoroughly enjoy exploring the diverse applications that Adobe has to offer.</p>
+            <p style="font-size: 1em;height: auto;position: relative;top: -5em;">Ever since I was little, I was always drawing and coming up with creative ways to solve problems. My parents liked to call me the MacGyver of the house. It wasn’t until junior year of highschool where I discovered graphic design, and I knew instantly that was what my career was going to be. Photography has always been part of my life as well. I like to say my catchphrase is ‘Graphic Designer my day, Photographer my night’ but maybe that is a little cheesy. When I’m not on my computer you can find me tending to my plants, doing some activity outside, or playing with my cats and dog. </p>
         
+            </div>
+        </div>
     </div>
+    <h2 style="margin-top: 6%;margin-bottom: 0;text-align: center;font-size: 2em;">Contact Me</h2>
+
+        <p style="text-align: center;padding-top: 0;padding-bottom: 0;">208.541.1777</p>
+        <p style="text-align: center;padding-bottom: 6%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;position: relative;top: -1em;">toni.does.design@gmail.com</p>
+
+    
     <footer class="footer">
         <div class="fg">
             <a href=""><img src="Content/Logo/instagram.png"></a>
