--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles/Portfolio.css">
     <title>Stevens</title>
-    <link rel="icon" type="image/x-icon" href="">
+    <link rel="icon" type="image/x-icon" href="Content/Logo/teal logo.png">
 </head>
 <body>
     <nav style="position: fixed;z-index: 100;" class="navgrid">
@@ -24,6 +24,8 @@
 
     <h3 class="scroll">↓ Scroll For More ↓</h3>
 
+    <h3 class="scroll">Portfolio</h3>
+
     <div class="picgrid">
         <!-- Start of the entire Portfolio Examples -->
         <div class="picgrid2">
@@ -35,44 +37,86 @@
             </div>
             -->
             <div class="picgrid3">
-                <a href="Portfolio.html"><p>Example</p></a>
-                <img src="Content/design/Advertising.png">
+                <img src="Content/Cloudveil/cloudveil mockup.jpg">
+                <a href="Portfolio.html"><p>TYFS<br>Cloudveil Event</p></a>
             </div>
             <div class="picgrid3">
                 <img src="Content/design/Advertising2.png">
-                <a href="Portfolio.html"><p>Example</p></a>
+                <a href="Portfolio.html"><p>TeacHeroes</p></a>
             </div>
             <div class="picgrid3">
-                <img src="Content/photography/Landscape1.png">
-                <a href="Portfolio.html"><p>Example</p></a>
+                <img src="Content/Kitchen packaging/DSC_0239.JPG">
+                <a href="Portfolio.html"><p>Packaging</p></a>
             </div>
             <!-- End of left side items -->
         </div>
         <div class="picgrid2">
             <!-- Start of right side items -->
             <div class="picgrid3">
-                <img src="Content/CFC/Social graphic Teacher ads10.jpg">
-                <a href="Portfolio.html"><p>Filler</p></a>
+                <img src="Content/DW/Broadway/Broadway Workshop flyers4.jpg">
+                <a href="Portfolio.html"><p>Dancers' <br> Workshop</p></a>
             </div>
             <div class="picgrid3">
-                <img src="Content/photography/Nature1.png">
-                <a href="Portfolio.html"><p>#</p></a>
+                <img src="Content/JH Chamber Annual report/JH Chamber annual report mockup.jpg">
+                <a href="Portfolio.html"><p>JH Chamber<br>Annual Report</p></a>
             </div>
             <div class="picgrid3">
-                <img src="Content/DW/Broadway/Broadway Workshop flyers.jpg">
-                <a href="Portfolio.html"><p>#</p></a>
+                <img src="Content/AW Bistro/to go mockup.png">
+                <a href="Portfolio.html"><p>AppleWood Branding</p></a>
             </div>
             <!-- End of right side items -->
         </div>      
     </div>
     <!-- End of portfolio examples -->
     <div class="me">
-        <h2 style="text-align: center; margin-top: 7%;">About Me</h2>
+        <h2 style="text-align: center; margin-top: 7%;color: white;">About Me</h2>
         <div class="ag">
             <p>Hi! My name is Antonia, but you can call me Toni.<br> I am a Graphic Designer based out of South East Idaho. I earned my BA for graphic design at BYUI where I took a variety of art and photography classes. My main focus is in Branding and Identity projects, but I thoroughly enjoy exploring the diverse applications that Adobe has to offer.</p>
-            <img style="width: 100%;" src="Content/ToniPortrait.png" alt="Toni Stevens Portrait">
+            <img style="width: 100%;" src="Content/ToniPortrait.jpg" alt="Toni Stevens Portrait">
         </div>
     </div>
+
+    <h3 class="scroll">Photography</h3>
+
+    <div class="picgrid" style="border-bottom: 2px rgb(51, 102, 102) solid;padding-bottom: 4%;">
+        <div class="picgrid2">
+            <div class="picgrid3">
+                <img src="Content/photography/portraits/IMG_3170.JPG">
+                <a href="Photography.html"><p>Portraits</p></a>
+            </div>
+            <div class="picgrid3">
+                <img src="Content/photography/landscapes/IMG_2498.JPG">
+                <a href="Photography.html"><p>Landscapes</p></a>
+            </div>
+            <div class="picgrid3">
+                <img src="Content/photography/close up/IMG_4081.JPG">
+                <a href="Photography.html"><p>Close Ups</p></a>
+            </div>
+            <div class="picgrid3">
+                <img src="Content/photography/sports/IMG_3104.JPG">
+                <a href="Photography.html"><p>Sports</p></a>
+            </div>
+        </div>
+        <div class="picgrid2">
+            <div class="picgrid3">
+                <img src="Content/photography/close up/IMG_3968.JPG">
+                <a href="Photography.html"><p>Close Ups</p></a>
+            </div>
+            <div class="picgrid3">
+                <img src="Content/photography/portraits/IMG_4655.JPG">
+                <a href="Photography.html"><p>Portraits</p></a>
+            </div>
+            <div class="picgrid3">
+                <img src="Content/photography/sports/IMG_8073.jpg">
+                <a href="Photography.html"><p>Sports</p></a>
+            </div>
+            <div class="picgrid3">
+                <img src="Content/photography/landscapes/IMG_3745.JPG">
+                <a href="Photography.html"><p>Landscapes</p></a>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer">
         <div class="fg">
             <a href=""><img src="Content/Logo/instagram.png"></a>
