--- a/Portfolio.html
+++ b/Portfolio.html
@@ -19,12 +19,16 @@
     <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">Portfolio</h1>
         <div class="navgrid">
             <div class="pgl">
-                <img src="Content/DW/Gyrokinesis/GYROKINESIS & GYROTONIC.jpg">
-                <p>alksdjh lkj ahsdlkfjh lkjhadslkjhf lkajshdf lkjashdflkjahsdlk jhalskjdhf laksjdh</p>
+                <a href="" style="z-index: 10;"><img src="Content/Cloudveil/cloudveil mockup.jpg"></a>
+                <div class="pgl2">
+                    <h2>TYFS Cloudveil</h2><h3>Typography</h3><p>Adobe Indesign, Illustrator</p><p>2023</p>
+                </div>
             </div>
             <div class="pgr">
-                <img src="Content/DW/Craniosacral/Craniosacral work 2.jpg">
-                <p>alskdjfh alskdjhflaksjdhflkjahs dlkfjha sldkjfh alksjdhflkajhs dflkjha slkdjhf alksjdhf lakjshdflkjahs dlkjhf lakjshd flkjha sdlkjfh lakjsdh f</p>
+                <a href="" style="z-index: 10;"><img src="Content/DW/Craniosacral/Craniosacral work 2.jpg"></a>
+                <div class="pgr2">
+                    <p>alskdjfh alskdjhflaksjdhflkjahs dlkfjha sldkjfh alksjdhflkajhs dflkjha slkdjhf alksjdhf lakjshdflkjahs dlkjhf lakjshd flkjha sdlkjfh lakjsdh f</p>
+                </div>
             </div>
         </div>
         <footer class="footer">
