--- a/Photography.html
+++ b/Photography.html
@@ -19,36 +19,131 @@
 
     <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">Photography</h1>
 
-    <div class="picgrid" style="margin-top: 6%;">
+    <h2 style="padding-top: 5%;padding-bottom: 4%;text-align: center;">Nature</h2>
+    <div class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
         <div class="picgrid2">
             <div class="picgrid3">
                 <p>Hola</p>
-                <img src="Content/photography/Portrait1.png">
+                <img src="">
             </div>
             <div class="picgrid3">
                 <p>Hola</p>
-                <img src="Content/photography/Nature1.png">
+                <img src="">
+            </div>
+            <div class="picgrid3">
+                <p>Hola</p>
+                <img src="">
             </div>
         </div>
         <div class="picgrid2">
             <div class="picgrid3">
                 <p>Hola</p>
-                <img src="Content/photography/Close1.png">
+                <img src="">
             </div>
             <div class="picgrid3">
                 <p>Hola</p>
-                <img src="Content/photography/Portrait2.png">
+                <img src="">
             </div>
             <div class="picgrid3">
                 <p>Hola</p>
-                <img src="Content/photography/Landscape1.png">
-            </div>
-            <div class="picgrid3">
-                <p>Hola</p>
-                <img src="Content/photography/Portrait3.png">
+                <img src="">
             </div>
         </div>
     </div>
+    <h2 style="padding-top: 5%;padding-bottom: 4%; text-align: center;">Sports</h2>
+    <div class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <div class="picgrid2">
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+    </div>
+    <div class="picgrid2">
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+    </div>
+</div>
+    <h2 style="padding-top: 5%;padding-bottom: 4%; text-align: center;">Close Ups</h2>
+    <div class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <div class="picgrid2">
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+    </div>
+    <div class="picgrid2">
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+    </div>
+    </div>
+    <h2 style="padding-top: 5%;padding-bottom: 4%; text-align: center;">Portraits</h2>
+    <div class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <div class="picgrid2">
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+    </div>
+    <div class="picgrid2">
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+        <div class="picgrid3">
+            <p>Hola</p>
+            <img src="">
+        </div>
+    </div>
+    </div>
+</div>
     <footer class="footer">
         <div class="fg">
             <a href=""><img src="Content/Logo/instagram.png"></a>
