--- a/Portfolio.html
+++ b/Portfolio.html
@@ -18,16 +18,96 @@
     </nav>
     <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">Portfolio</h1>
         <div class="navgrid">
+            <!--
+                <div class="pg">
+                    <a href="" style="z-index: 10;"><img src=""></a>
+                    <div class="pg2">
+                        <h2>title</h2>
+                        <h3>type</h3>
+                        <p>position</p>
+                        <p>year</p>
+                    </div>
+                </div>
+            -->
             <div class="pgl">
-                <a href="" style="z-index: 10;"><img src="Content/Cloudveil/cloudveil mockup.jpg"></a>
+                <a href="ProjectPages/Cloudveil.html" style="z-index: 10;"><img src="Content/Cloudveil/cloudveil mockup.jpg"></a>
                 <div class="pgl2">
-                    <h2>TYFS Cloudveil</h2><h3>Typography</h3><p>Adobe Indesign, Illustrator</p><p>2023</p>
+                    <h2>TYFS Cloudveil</h2>
+                    <h3>Typography</h3>
+                    <p>Adobe Indesign, Illustrator</p>
+                    <p>2023</p>
                 </div>
             </div>
             <div class="pgr">
-                <a href="" style="z-index: 10;"><img src="Content/DW/Craniosacral/Craniosacral work 2.jpg"></a>
+                <a href="" style="z-index: 10;"><img src="Content/Kitchen packaging/DSC_0006.JPG"></a>
                 <div class="pgr2">
-                    <p>alskdjfh alskdjhflaksjdhflkjahs dlkfjha sldkjfh alksjdhflkajhs dflkjha slkdjhf alksjdhf lakjshdflkjahs dlkjhf lakjshd flkjha sdlkjfh lakjsdh f</p>
+                    <h2>Kitchen Packaging</h2>
+                    <h3>Package Design</h3>
+                    <p>Adobe Photoshop, Illustrator</p>
+                    <p>2022</p>
+                </div>
+            </div>
+            <div class="pgl">
+                <a href="" style="z-index: 10;"><img src="Content/DW/Broadway/Broadway Workshop flyers3.jpg"></a>
+                <div class="pgl2">
+                    <h2>Dancers' Workshop Ads</h2>
+                    <h3>Advertising</h3>
+                    <p>Adobe Indesign, Photoshop, Illustrator</p>
+                    <p>2022 - present</p>
+                </div>
+            </div>
+            <div class="pgr">
+                <a href="" style="z-index: 10;"><img src="Content/JH Chamber Annual report/JH Chamber annual report mockup.jpg"></a>
+                <div class="pgr2" style="grid-template-rows: 5.5em 3em 1.6em 1em;;">
+                    <h2>JH Chamber Annual Report</h2>
+                    <h3>Typography/Infographics</h3>
+                    <p>Adobe Indesign, Illustrator</p>
+                    <p>2022</p>
+                </div>
+            </div>
+            <div class="pgl">
+                <a href="" style="z-index: 10;"><img src="Content/Time Travel/poster mockup.png"></a>
+                <div class="pgl2">
+                    <h2>Flashback Time Travel</h2>
+                    <h3>Typography/Infographics</h3>
+                    <p>Adobe Indesign, Illustrator</p>
+                    <p>2022</p>
+                </div>
+            </div>
+            <div class="pgr">
+                <a href="" style="z-index: 10;"><img src="Content/CFC/cfc weekly.jpg"></a>
+                <div class="pgr2">
+                    <h2>CFC TeacHeroes Ads</h2>
+                    <h3>Advertising</h3>
+                    <p>Adobe Indesign, Photoshop</p>
+                    <p>2023 - 2024</p>
+                </div>
+            </div>
+            <div class="pgl">
+                <a href="" style="z-index: 10;"><img src="Content/Animal Extinction/subway mockup.png"></a>
+                <div class="pgl2" style="grid-template-rows: 5.5em 3em 1.6em 1em;;">
+                    <h2>Endangered Species Infographic</h2>
+                    <h3>Infographics</h3>
+                    <p>Adobe Illustrator</p>
+                    <p>2023</p>
+                </div>
+            </div>
+            <div class="pgr">
+                <a href="" style="z-index: 10;"><img src="Content/AW Bistro/Menu Mockup.jpg"></a>
+                <div class="pgr2">
+                    <h2>AppleWood Bistro</h2>
+                    <h3>Bradning Design/Typography</h3>
+                    <p>Adobe Illustrator, Indesign, Photoshop</p>
+                    <p>2022</p>
+                </div>
+            </div>
+            <div class="pgl">
+                <a href="" style="z-index: 10;"><img src="Content/Rise of AI/devices mockup.jpg"></a>
+                <div class="pgl2">
+                    <h2>Rise of AI Infographics</h2>
+                    <h3>Infographics</h3>
+                    <p>Adobe Illustrator</p>
+                    <p>2023</p>
                 </div>
             </div>
         </div>
@@ -39,4 +119,4 @@
             </div>
         </footer>
 </body>
-</html>/
+</html>
