--- a/Photography.html
+++ b/Photography.html
@@ -19,127 +19,127 @@
 
     <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">Photography</h1>
 
-    <h2 style="padding-top: 5%;padding-bottom: 4%;text-align: center;">Nature</h2>
-    <div class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <h2 style="padding-top: 5%;padding-bottom: 4%;text-align: center;">Landscapes</h2>
+    <div class="picgrid" style="margin-top: 6%;padding-bottom: 2%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
         <div class="picgrid2">
             <div class="picgrid3">
-                <p>Hola</p>
-                <img src="">
+                <p>Landscapes</p>
+                <img src="Content/photography/landscapes/IMG_1178.JPG">
             </div>
             <div class="picgrid3">
-                <p>Hola</p>
-                <img src="">
+                <p>Landscapes</p>
+                <img src="Content/photography/landscapes/IMG_2394.JPG">
             </div>
             <div class="picgrid3">
-                <p>Hola</p>
-                <img src="">
+                <p>Landscapes</p>
+                <img src="Content/photography/landscapes/IMG_2498.JPG">
             </div>
         </div>
         <div class="picgrid2">
             <div class="picgrid3">
-                <p>Hola</p>
-                <img src="">
+                <p>Landscapes</p>
+                <img src="Content/photography/landscapes/IMG_3639.JPG">
             </div>
             <div class="picgrid3">
-                <p>Hola</p>
-                <img src="">
+                <p>Landscapes</p>
+                <img src="Content/photography/landscapes/IMG_3745.JPG">
             </div>
             <div class="picgrid3">
-                <p>Hola</p>
-                <img src="">
+                <p>Landscapes</p>
+                <img src="Content/photography/landscapes/IMG_3864.JPG">
             </div>
         </div>
     </div>
-    <h2 style="padding-top: 5%;padding-bottom: 4%; text-align: center;">Sports</h2>
+    <h2 style="padding-top: 5%;padding-bottom: 2%; text-align: center;">Sports</h2>
     <div class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
     <div class="picgrid2">
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Sports</p>
+            <img src="Content/photography/sports/IMG_3104.JPG">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Sports</p>
+            <img src="Content/photography/sports/IMG_8073.jpg">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Sports</p>
+            <img src="Content/photography/sports/IMG_3104.JPG">
         </div>
     </div>
     <div class="picgrid2">
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Sports</p>
+            <img src="Content/photography/sports/IMG_2786.JPG">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Sports</p>
+            <img src="Content/photography/sports/IMG_8259.JPG">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Sports</p>
+            <img src="Content/photography/sports/IMG_2892.JPG">
         </div>
     </div>
 </div>
     <h2 style="padding-top: 5%;padding-bottom: 4%; text-align: center;">Close Ups</h2>
-    <div class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <div class="picgrid" style="margin-top: 6%;padding-bottom: 2%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
     <div class="picgrid2">
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Close Ups</p>
+            <img src="Content/photography/close up/IMG_2151.JPG">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Close Ups</p>
+            <img src="Content/photography/close up/IMG_3991.JPG">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Close Ups</p>
+            <img src="Content/photography/close up/IMG_4068.JPG">
         </div>
     </div>
     <div class="picgrid2">
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Close Ups</p>
+            <img src="Content/photography/close up/IMG_4071.JPG">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Close Ups</p>
+            <img src="Content/photography/close up/IMG_5776.jpg">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Close Ups</p>
+            <img src="Content/photography/close up/IMG_5816.jpg">
         </div>
     </div>
     </div>
     <h2 style="padding-top: 5%;padding-bottom: 4%; text-align: center;">Portraits</h2>
-    <div class="picgrid" style="margin-top: 6%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
+    <div class="picgrid" style="margin-top: 6%;padding-bottom: 2%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">
     <div class="picgrid2">
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Portraits</p>
+            <img src="Content/photography/portraits/IMG_7892.jpg">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Portraits</p>
+            <img src="Content/photography/portraits/IMG_0839.JPG">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Portraits</p>
+            <img src="Content/photography/portraits/IMG_3170.JPG">
         </div>
     </div>
     <div class="picgrid2">
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Portraits</p>
+            <img src="Content/photography/portraits/IMG_3200.JPG">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Portraits</p>
+            <img src="Content/photography/portraits/IMG_5492.jpg">
         </div>
         <div class="picgrid3">
-            <p>Hola</p>
-            <img src="">
+            <p>Portraits</p>
+            <img src="Content/photography/portraits/IMG_5677.jpg">
         </div>
     </div>
     </div>
