--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,7 +17,7 @@
         </div>
     </nav>
     <h1 class="title" style="padding-top: 15%;padding-bottom: 4%;border-bottom: 2px rgb(51, 102, 102) solid;width:70%;margin-left: 15%;">Portfolio</h1>
-        <div class="navgrid">
+        <div class="navgrid0">
             <!--
                 <div class="pg">
                     <a href="" style="z-index: 10;"><img src=""></a>
