--- a/ProjectPages/Cloudveil.html
+++ b/ProjectPages/Cloudveil.html
@@ -4,20 +4,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/Styles/Portfolio.css">
+        <link rel="stylesheet" href="Styles/Portfolio.css">
         <title>Stevens</title>
-        <link rel="icon" type="image/x-icon" href="/Content/Logo/teal logo.png">
+        <link rel="icon" type="image/x-icon" href="Content/Logo/teal logo.png">
 </head>
 <body class="pp">
     <nav style="position: fixed;z-index: 100;" class="navgrid">
             <div class="navgrid2">
-                <a href="/Index.html" class="ob">Home</a>
-                <a href="/Portfolio.html" class="ob">Portfolio</a>
-                <a href="/Photography.html" class="ob">Photos</a>
-                <a href="/About.html" class="ob">About</a>
+                <a href="Index.html" class="ob">Home</a>
+                <a href="Portfolio.html" class="ob">Portfolio</a>
+                <a href="Photography.html" class="ob">Photos</a>
+                <a href="About.html" class="ob">About</a>
             </div>
     </nav>
-    <img src="/Content/Cloudveil/cloudveil mockup.jpg">
+    <img src="Content/Cloudveil/cloudveil mockup.jpg">
     <h2>TYFS Cloudveil</h2>
     <p style="position: relative; top:-3.5em">Typography</p>
     <p style="position: relative; top:-4.5em;font-size: .7em;">*This project was completed while working for Creative Curiosity*</p>
@@ -27,24 +27,24 @@
     </p>
     <div class="picgrid" style="border-bottom: 2px rgb(51, 102, 102) solid;padding-bottom: 4%;">
         <div class="picgrid2">
-            <img src="/Content/Cloudveil/TYFS Cloudveil Event Program 2023.jpg">
-            <img src="/Content/Cloudveil/TYFS Cloudveil Event Program 20233.jpg">
-            <img src="/Content/Cloudveil/TYFS Cloudveil Event Program 20235.jpg">
-            <img src="/Content/Cloudveil/TYFS Cloudveil Event Program 20237.jpg">
+            <img src="Content/Cloudveil/TYFS Cloudveil Event Program 2023.jpg">
+            <img src="Content/Cloudveil/TYFS Cloudveil Event Program 20233.jpg">
+            <img src="Content/Cloudveil/TYFS Cloudveil Event Program 20235.jpg">
+            <img src="Content/Cloudveil/TYFS Cloudveil Event Program 20237.jpg">
         </div>
         <div class="picgrid2">
-            <img src="/Content/Cloudveil/TYFS Cloudveil Event Program 20232.jpg">
-            <img src="/Content/Cloudveil/TYFS Cloudveil Event Program 20234.jpg">
-            <img src="/Content/Cloudveil/TYFS Cloudveil Event Program 20236.jpg">
-            <img src="/Content/Cloudveil/TYFS Cloudveil Event Program 20238.jpg">
+            <img src="Content/Cloudveil/TYFS Cloudveil Event Program 20232.jpg">
+            <img src="Content/Cloudveil/TYFS Cloudveil Event Program 20234.jpg">
+            <img src="Content/Cloudveil/TYFS Cloudveil Event Program 20236.jpg">
+            <img src="Content/Cloudveil/TYFS Cloudveil Event Program 20238.jpg">
         </div>
     </div>
     
     <footer class="footer">
         <div class="fg">
-            <a href=""><img style="width: 100%;" src="/Content/Logo/instagram.png"></a>
-            <a href=""><img style="width: 100%;" src="/Content/Logo/linked in.png"></a>
-            <a href=""><img style="width: 100%;" src="/Content/Logo/behance.png"> </a>
+            <a href=""><img style="width: 100%;" src="Content/Logo/instagram.png"></a>
+            <a href=""><img style="width: 100%;" src="Content/Logo/linked in.png"></a>
+            <a href=""><img style="width: 100%;" src="Content/Logo/behance.png"> </a>
         </div>
     </footer>
 </body>
