--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,7 +30,7 @@
                 </div>
             -->
             <div class="pgl">
-                <a href="ProjectPages/Cloudveil.html" style="z-index: 10;"><img src="Content/Cloudveil/cloudveil mockup.jpg"></a>
+                <a href="Cloudveil.html" style="z-index: 10;"><img src="Content/Cloudveil/cloudveil mockup.jpg"></a>
                 <div class="pgl2">
                     <h2>TYFS Cloudveil</h2>
                     <h3>Typography</h3>
